VSE: Bake Sound to Curve CRASHES Blender #39424

Closed
opened 2014-03-26 03:42:54 +01:00 by david mcsween · 6 comments

System Information
Operating system and graphics card
Win 7 64 bit

Blender Version
Broken: blender-2.70-b66a954-win64
Worked: can't find a working version

Short description of error
Baked Sound to F curve, if applied to a VSE strip, crashes Blender when strip moved.

Exact steps for others to reproduce the error

  1. Add a strip
  2. Add a keyframe to Opacity
  3. in fcurve editor create a Bake Sound to Fcurve
  4. return to VSE and move the strip.
  5. CRASH.

.blend attached. Just try moving the strip in the VSE
VSE_bake_sound_crash.blend

**System Information** Operating system and graphics card Win 7 64 bit **Blender Version** Broken: blender-2.70-b66a954-win64 Worked: can't find a working version **Short description of error** Baked Sound to F curve, if applied to a VSE strip, crashes Blender when strip moved. **Exact steps for others to reproduce the error** 1. Add a strip 2. Add a keyframe to Opacity 3. in fcurve editor create a Bake Sound to Fcurve 4. return to VSE and move the strip. 5. CRASH. .blend attached. Just try moving the strip in the VSE [VSE_bake_sound_crash.blend](https://archive.blender.org/developer/F82599/VSE_bake_sound_crash.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @davidmcsween

Added subscriber: @davidmcsween
Bastien Montagne self-assigned this 2014-03-26 19:58:17 +01:00

This issue was referenced by blender/blender-addons-contrib@fd3de8b042

This issue was referenced by blender/blender-addons-contrib@fd3de8b04224711b1502e4acde33d5f772dde544

This issue was referenced by fd3de8b042

This issue was referenced by fd3de8b04224711b1502e4acde33d5f772dde544

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit fd3de8b042.

Closed by commit fd3de8b042.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39424
No description provided.