Fix T39424: VSE: Bake Sound to Curve CRASHES Blender

BKE_sequencer_offset_animdata() was simply assuming bezt member of fcurve was always valid, while it might be NULL (e.g. when fcurve is using FPoints instead, like when generated from sound file).